--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-flash",
+  "name": "@ad00m87/react-flash",
   "version": "1.0.0",
   "description": "A simple self destructing flash component",
   "main": "./dist/index.js",
